--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <section class="header">
+        <div class="header">
             <div class="container">
                 <a class="logo" href="https://lands.expert/">
                     <img class="logo-img" src="./img/Логотип.png" alt="style">
@@ -22,11 +22,11 @@
                     </div>
                 </a>
             </div>
-        </section>
+        </div>
 
-    <main></main>
+    <div class="main"></div>
 
-        <section class="footer">
+        <div class="footer">
             <div class="container">
                 <nav class="nav__contact">
                     <ul class="nav__contact-list">
@@ -39,7 +39,7 @@
                     </ul>
                 </nav>
             </div>
-        </section>
+        </div>
     </div>
 </body>
 </html>
